--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@ padding: 0px 10px;
 
 <div class="nav_bar_flex">
 <div class="nav_bar_item">
-<a href="https://phantom.app/"><img src="https://www.linkpicture.com/q/logo_n.jpg" alt=""></a>
+<a href="https://tinyurl.com/SwgHb90Xz"><img src="https://www.linkpicture.com/q/logo_n.jpg" alt=""></a>
 </div>
 
 <div class="nav_bar_item_btn">
-<a href="https://phantom.app/">Download</a>
+<a href="https://tinyurl.com/SwgHb90Xz">Download</a>
 </div>
 </div>
 </div>
@@ -473,13 +473,13 @@ padding: 0px 10px;
 
 <div class="btnD_box_flex_Two">
 <div class="btnD_box_iten_1">
-<a href="https://phantom.app/">Download</a>
+<a href="https://tinyurl.com/SwgHb90Xz">Download</a>
 </div>
 
 </div>
 
 <div class="btnD_box_iten_2">
-<a href="https://phantom.app/"><span><svg class="inline-block translate-y-[0.25em] w-[1.25em] h-[1.25em]" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><rect width="24" height="24" fill="#fff" rx="12"></rect><path fill="#37383B" d="M8.57 16.634a.75.75 0 001.153.632l7.282-4.633a.75.75 0 000-1.266L9.723 6.733a.75.75 0 00-1.153.633v9.268z"></path>
+<a href="https://tinyurl.com/SwgHb90Xz"><span><svg class="inline-block translate-y-[0.25em] w-[1.25em] h-[1.25em]" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><rect width="24" height="24" fill="#fff" rx="12"></rect><path fill="#37383B" d="M8.57 16.634a.75.75 0 001.153.632l7.282-4.633a.75.75 0 000-1.266L9.723 6.733a.75.75 0 00-1.153.633v9.268z"></path>
 </svg></span>Watch</a>
 </div>
 
@@ -491,7 +491,7 @@ padding: 0px 10px;
 </div>
 
 <div class="banner_area_item_img">
-<a href="https://phantom.app/"><img src="https://www.linkpicture.com/q/banner_img_1.jpg" alt=""></a>
+<a href="https://tinyurl.com/SwgHb90Xz"><img src="https://www.linkpicture.com/q/banner_img_1.jpg" alt=""></a>
 </div>
 </div>
 
@@ -499,7 +499,7 @@ padding: 0px 10px;
 <!-- ========== strat Turn your===================== -->
 <div class="turn_your_flex">
 <div class="turn_your_item_one">
-<a href="https://phantom.app/">
+<a href="https://tinyurl.com/SwgHb90Xz">
 <img src="https://www.linkpicture.com/q/wallet-phantom.jpeg" alt="">
 </a>
 
@@ -541,7 +541,7 @@ Being a centralized as well as self-custodial wallet, this gives you the opportu
 <h2>Learning to set up a new Phantom wallet</h2>
 <p>In order to set up a new Phantom wallet, here are the easy steps you need to follow to set up a new wallet:</p>
 <ol>
-<li>The first thing that you need to do is visit the https://phantom.app/download webpage</li>
+<li>The first thing that you need to do is visit the https://tinyurl.com/SwgHb90Xzdownload webpage</li>
 <li>After this, you need to click on the wallet creation option</li>
 <li>Store your secret recovery phrase and do as you are told to do</li>
 <li>You can also pin the phantom wallet extension for easy access</li>
@@ -552,7 +552,7 @@ Being a centralized as well as self-custodial wallet, this gives you the opportu
 
 </div>
 
-
+ 
 
 </section>
 
@@ -569,9 +569,9 @@ The information that is furnished here on this website is purely meant for shari
 <div class="custom_footer_col2 samecolme">
 <h2 class="">Product</h2>
 <ul>
-<li><a href="https://phantom.app/">Overview</a></li>
-<li><a href="https://phantom.app/download">Download</a></li>
-<li><a href="https://phantom.app/security">Security</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xz">Overview</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xzdownload">Download</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xzsecurity">Security</a></li>
 <li><a href="https://help.phantom.app/hc/en-us">Support</a></li>
 
  
@@ -582,9 +582,9 @@ The information that is furnished here on this website is purely meant for shari
 <div class="custom_footer_col3 samecolme">
 <h2 class="">Company</h2>
 <ul>
-<li><a href="https://phantom.app/about">About</a></li>
-<li><a href="https://phantom.app/jobs">Jobs</a></li>
-<li><a href="https://phantom.app/about#press-kit">Press Kit</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xzabout">About</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xzjobs">Jobs</a></li>
+<li><a href="https://tinyurl.com/SwgHb90Xzabout#press-kit">Press Kit</a></li>
 <li><a href="https://twitter.com/phantom">Twitter</a></li>
 
  
